add tag_post input on post view, attempt at reddit domain intercept for watson, picked_tags array search on tag_pick instead of name

--- a/client/post.jade
+++ b/client/post.jade
@@ -74,6 +74,8 @@ template(name='post')
                     .spacer
                     +print_this
                     +call_watson
+                    .ui.input
+                        input.tag_post(type='text' placeholder='tag...')
                     // img(src=url)
                     // div(style='position:relative; padding-bottom:calc(125.00% + 44px)')
                     //     iframe(src='https://gfycat.com/ifr/MeanFatAmurratsnake' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen)
