add title to tags, working avatar again

--- a/client/home.jade
+++ b/client/home.jade
@@ -132,8 +132,8 @@ template(name='card')
                 |!{title} 
                 // span.inline.content
             |{{ufrom created_utc}}
-            each unique_tags
-                a.ui.basic.label.flat_tag_pick #{this}
+            // each unique_tags
+            //     a.ui.basic.label.flat_tag_pick #{this}
             // .ui.label #{data.domain}
             // .ui.label 
             //     i.user.icon
