--- a/client/home.jade
+++ b/client/home.jade
@@ -8,7 +8,7 @@ template(name='home')
                 //     i.lightbulb.link.icon.toggle_nightmode
                 unless picked_tags
                     .ui.center.aligned.basic.segment
-                        .ui.icon.massive.input
+                        .ui.icon.big.fluid.input
                             i.search.icon
                             input.search_input(type='text' value=query autofocus='' placeholder="search...")
                         div
@@ -129,7 +129,7 @@ template(name='card')
         .content
             // a.ui.inline.header.view_post.zoomer(href="" class=post_header_class target='_window')
             a.ui.inline.header.goto_post.pointer(class=post_header_class title=domain)
-                |!{title} 
+                |!{title} #{metadata.title}
                 // span.inline.content
             |{{ufrom created_utc}}
             // each unique_tags
@@ -156,7 +156,7 @@ template(name='unpick_tag')
 
 template(name='flat_tag_picker')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    a.ui.basic.image.label.zoomer.select_flat_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
+    a.ui.basic.image.large.label.zoomer.select_flat_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.metadata.image
                 img.ui.image.superzoom(src=term.metadata.image )    
