--- a/client/post.jade
+++ b/client/post.jade
@@ -6,8 +6,9 @@ template(name='post')
                     i.chevron.left.large.icon
                     // |#{data.subreddit}
                 span.ui.header(class=post_header_class)
-                    .ui.label #{ups}
-                    |!{title} #{link_title}
+                    if ups
+                        .ui.label #{ups}
+                    |!{title} #{link_title} #{metadata.title}
                 .ui.basic.circular.compact.small.button.get_post
                     i.external.icon
                     |#{permalink}
