--- a/client/alpha.jade
+++ b/client/alpha.jade
@@ -58,7 +58,7 @@ template(name='alpha')
                         // .ui.list
                         each subpods
                             .ui.small.inline.header #{title}
-                            img.ui.zoomer.pointer.image.inline.alphatemp(src=img.src)
+                            img.ui.pointer.image.inline.alphatemp(src=img.src)
                         // .item.alphatemp
                         // |#{plaintext}
                         // .item title: #{title}
