--- a/client/home.jade
+++ b/client/home.jade
@@ -70,39 +70,40 @@ template(name='home')
                         +tag_picker
                         // .ui.label(title=count) #{name}
         .row
-            // .ui.four.wide.column
-            //     each wikis
-            //         .ui.card
-            //             if metadata.image
-            //                 // a(href=url target='_window')
-            //                 img.ui.image.toggle_view(src=metadata.image)
-            //             .content
-            //                 i.large.wikipedia.icon
-            //                 a.ui.inline.header(href=url target='_window') #{title}
-            //                 a.black_text(href=url target='_window')
-            //                     |{{ trunc analyzed_text }}...
-            //                 each ten_tags
-            //                     +flat_tag_picker
-            //                     // .ui.label.flat_tag_pick #{this}
-            //         // if one_post
-            //         //     .ui.stackable.one.column.grid
-            //         //         each rposts
-            //         //             +card
-                            
-            //         // else if two_posts
-            //         //     .ui.stackable.three.centered.column.grid
-            //         //         each rposts
-            //         //             +card
-            //             // else if three_posts
-            //         // else
-            +alpha
-            if picked_tags
-                .ui.sixteen.wide.column
-                    .ui.stackable.four.column.grid.scrolling
-                        each rposts
-                            +card
-                    //     .ui.basic.center.aligned.segment
-                    //         i.big.loading.yin.yang.icon
+            .sixteen
+                // .ui.four.wide.column
+                //     each wikis
+                //         .ui.card
+                //             if metadata.image
+                //                 // a(href=url target='_window')
+                //                 img.ui.image.toggle_view(src=metadata.image)
+                //             .content
+                //                 i.large.wikipedia.icon
+                //                 a.ui.inline.header(href=url target='_window') #{title}
+                //                 a.black_text(href=url target='_window')
+                //                     |{{ trunc analyzed_text }}...
+                //                 each ten_tags
+                //                     +flat_tag_picker
+                //                     // .ui.label.flat_tag_pick #{this}
+                //         // if one_post
+                //         //     .ui.stackable.one.column.grid
+                //         //         each rposts
+                //         //             +card
+                                
+                //         // else if two_posts
+                //         //     .ui.stackable.three.centered.column.grid
+                //         //         each rposts
+                //         //             +card
+                //             // else if three_posts
+                //         // else
+                +alpha
+                if picked_tags
+                    .ui.sixteen.wide.column
+                        .ui.stackable.four.column.grid.scrolling
+                            each rposts
+                                +card
+                        //     .ui.basic.center.aligned.segment
+                        //         i.big.loading.yin.yang.icon
 template(name='search_shortcut')
     i.big.grey.link.icon.click_shortcut.zoomer(class=icon title=tag)
 
