--- a/client/home.jade
+++ b/client/home.jade
@@ -130,7 +130,10 @@ template(name='card')
         .content
             // a.ui.inline.header.view_post.zoomer(href="" class=post_header_class target='_window')
             a.ui.inline.header.goto_post.pointer(class=post_header_class title=domain)
-                |!{title} #{metadata.title}
+                if title
+                    |!{title}
+                else 
+                    |#{metadata.title}
                 // span.inline.content
             |{{ufrom created_utc}}
             // each unique_tags
