--- a/client/client.jade
+++ b/client/client.jade
@@ -35,19 +35,19 @@ head
         gtag('config', 'G-GLYPPRGJFQ');
 
 
-template(name='nav')
-    // .ui.fluid.attached.borderless.three.item.menu
-    //     a.ui.icon.item(href="/" class="{{isActiveRoute regex='home'}}")
-    //         i.search.large.icon
-    //     a.ui.icon.item(href="/users" class="{{isActiveRoute regex='user'}}")
-    //         i.user.outline.large.icon
-    
+            
+            
 
-            
-            
 template(name='layout')
+    // +status
     +nav
-    +yield
-
-
-            
+    .ui.bottom.attached.pushable.segment
+        +topbar
+        +leftbar
+        // +right_sidebar
+                
+        #main_area.global_container.pusher
+            +yield
+    
+    // .ui.bottom.attached.pushable.segment
+    //     #main_area.pusher(class=currentUser.invert_class)
