--- a/client/client.jade
+++ b/client/client.jade
@@ -42,9 +42,9 @@ template(name='layout')
     // +status
     +nav
     .ui.bottom.attached.pushable.segment
-        +topbar
+        // +topbar
         +leftbar
-        // +right_sidebar
+        +rightbar
                 
         #main_area.global_container.pusher
             +yield
