add in blocks, fields, bounties, baredly working person

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -29,54 +29,54 @@
 
 
 
-// template(name='ismall')
-//     img(src="https://img.icons8.com/color/24/000000/#{name}.png" class=classes title=title)
-//     //- img(src="https://img.icons8.com/cotton/24/000000/#{name}.png" class=classes title=title)
-//     //- img(src="https://img.icons8.com/ultraviolet/24/000000/#{name}.png" class=classes title=title)
-// template(name='ibig')    
-//     //- img.ui.image(src="https://img.icons8.com/dusk/256/000000/#{name}.png" class=cl)
-//     //- img.ui.image(src="https://img.icons8.com/cotton/256/000000/#{name}.png" class=cl)
-//     //- img.ui.image(src="https://img.icons8.com/office/256/000000/#{name}.png" class=cl)
-//     //- img.ui.image(src="https://img.icons8.com/plasticine/256/000000/#{name}.png" class=cl)
-//     //- img.ui.image(src="https://img.icons8.com/color/256/000000/#{name}.png" class=cl)
-//     //- img.ui.image(src="https://img.icons8.com/ios/256/000000/#{name}.png" class=cl)
-// template(name='icon')    
-//     i.icon(class=name)
-//     // img.ui.image(src="https://img.icons8.com/color/48/000000/#{name}.png" class=cl)
-//     // img.ui.image(src="https://img.icons8.com/plasticine/48/000000/#{name}.png" class=cl)
-//     // img.ui.image(src="https://img.icons8.com/ios/48/000000/#{name}.png" class=cl)
-//     // img.ui.image(src="https://img.icons8.com/color/48/000000/#{name}.png" class=cl)
-//     //- img.ui.image(src="https://img.icons8.com/fluent/48/000000/#{name}.png" class=cl)
-//     // img.ui.image(src="https://img.icons8.com/cotton/48/000000/#{name}.png" class=cl)
-//     //- img.ui.image(src="https://img.icons8.com/office/48/000000/#{name}.png" class=cl)
+template(name='ismall')
+    img(src="https://img.icons8.com/color/24/000000/#{name}.png" class=classes title=title)
+    //- img(src="https://img.icons8.com/cotton/24/000000/#{name}.png" class=classes title=title)
+    //- img(src="https://img.icons8.com/ultraviolet/24/000000/#{name}.png" class=classes title=title)
+template(name='ibig')    
+    //- img.ui.image(src="https://img.icons8.com/dusk/256/000000/#{name}.png" class=cl)
+    //- img.ui.image(src="https://img.icons8.com/cotton/256/000000/#{name}.png" class=cl)
+    //- img.ui.image(src="https://img.icons8.com/office/256/000000/#{name}.png" class=cl)
+    //- img.ui.image(src="https://img.icons8.com/plasticine/256/000000/#{name}.png" class=cl)
+    //- img.ui.image(src="https://img.icons8.com/color/256/000000/#{name}.png" class=cl)
+    //- img.ui.image(src="https://img.icons8.com/ios/256/000000/#{name}.png" class=cl)
+template(name='icon')    
+    i.icon(class=name)
+    // img.ui.image(src="https://img.icons8.com/color/48/000000/#{name}.png" class=cl)
+    // img.ui.image(src="https://img.icons8.com/plasticine/48/000000/#{name}.png" class=cl)
+    // img.ui.image(src="https://img.icons8.com/ios/48/000000/#{name}.png" class=cl)
+    // img.ui.image(src="https://img.icons8.com/color/48/000000/#{name}.png" class=cl)
+    //- img.ui.image(src="https://img.icons8.com/fluent/48/000000/#{name}.png" class=cl)
+    // img.ui.image(src="https://img.icons8.com/cotton/48/000000/#{name}.png" class=cl)
+    //- img.ui.image(src="https://img.icons8.com/office/48/000000/#{name}.png" class=cl)
 
-// template(name='comments')
-//     .spacer
-//     .ui.inline.grey.header
-//         i.chat.outline.icon
-//         |comments
-//     div
-//     .ui.fluid.icon.large.input
-//         i.plus.icon
-//         input.add_comment(model='text' placeholder='add')
-//     .ui.comments
-//         each doc_comments
-//             .comment
-//                 .content
-//                     .metadata
-//                         span.date #{when}
-//                     .text
-//                         | !{body}
-//                     span.actions
+template(name='comments')
+    .spacer
+    .ui.inline.grey.header
+        i.chat.outline.icon
+        |comments
+    div
+    .ui.fluid.icon.large.input
+        i.plus.icon
+        input.add_comment(model='text' placeholder='add')
+    .ui.comments
+        each doc_comments
+            .comment
+                .content
+                    .metadata
+                        span.date #{when}
+                    .text
+                        | !{body}
+                    span.actions
 
 
 
-// template(name='remove_button')
-//     .ui.icon.basic.circular.button.remove_doc(title='delete')
-//         i.remove.icon
-//         // |delete
-// template(name='remove_icon')
-//     i.remove.link.icon.remove_doc(title='delete')
+template(name='remove_button')
+    .ui.icon.basic.circular.button.remove_doc(title='delete')
+        i.remove.icon
+        // |delete
+template(name='remove_icon')
+    i.remove.link.icon.remove_doc(title='delete')
 
 // template(name='add_button')
 //     a.ui.large.basic.button.add(title="add #{model}")
