--- a/client/nav.jade
+++ b/client/nav.jade
@@ -4,7 +4,7 @@ template(name='nav')
             i.bars.icon
     
         a.icon.item.blink.clear(href="/" class="{{isActiveRoute regex='home'}}")
-            i.yin.yang.big.icon
+            i.yin.yang.large.icon
         a.icon.item.blink.clear.mobile.hidden(href="/stats" class="{{isActiveRoute 'stats'}}")
             i.line.chart.large.icon
         // .ui.dropdown.item
@@ -28,7 +28,7 @@ template(name='nav')
         a.icon.item.blink.clear.go_shop.mobile.hidden(href="/bounties" class="{{isActiveRoute 'bounties'}}")
             i.line.hand.holding.heart.large.icon
         if currentUser
-            a.icon.item.blink.clear(href="/users" class="{{isActiveRoute 'users'}}")
+            a.icon.item.blink.clear(href="/people" class="{{isActiveRoute 'people'}}")
                 i.users.large.icon
         // .item(title='session karma')
         //     i.grey.lightning.icon
