init people crud v1

--- a/client/home.jade
+++ b/client/home.jade
@@ -99,7 +99,7 @@ template(name='home')
                 +alpha
                 if picked_tags
                     .ui.sixteen.wide.column
-                        .ui.stackable.four.column.grid.scrolling
+                        .ui.stackable.three.column.grid.scrolling
                             each rposts
                                 +card
                         //     .ui.basic.center.aligned.segment
