--- a/client/nav.jade
+++ b/client/nav.jade
@@ -5,8 +5,8 @@ template(name='nav')
     
         a.icon.item.blink.clear(href="/" class="{{isActiveRoute regex='home'}}")
             i.yin.yang.large.icon
-        a.icon.item.blink.clear.mobile.hidden(href="/stats" class="{{isActiveRoute 'stats'}}")
-            i.line.chart.large.icon
+        // a.icon.item.blink.clear.mobile.hidden(href="/stats" class="{{isActiveRoute 'stats'}}")
+        //     i.line.chart.large.icon
         // .ui.dropdown.item
         //     |drop
         //     i.dropdown.icon
@@ -17,16 +17,16 @@ template(name='nav')
         //         .item 111
         // a.icon.item.blink.clear(href="/love" class="{{isActiveRoute 'love'}}")
         //     i.heart.outline.large.icon
-        a.icon.item.blink.clear(href="/reddit" class="{{isActiveRoute 'reddit'}}")
-            i.search.large.icon
-        a.icon.item.blink.clear(href="/subs" class="{{isActiveRoute 'subs'}}")
-            i.reddit.large.icon
-        a.icon.item.blink.clear(href="/stack" class="{{isActiveRoute 'stack'}}")
-            i.stack.exchange.large.icon
-        a.icon.item.blink.clear.go_shop.mobile.hidden(href="/shop" class="{{isActiveRoute 'shop'}}")
-            i.line.shop.large.icon
-        a.icon.item.blink.clear.go_shop.mobile.hidden(href="/bounties" class="{{isActiveRoute 'bounties'}}")
-            i.line.hand.holding.heart.large.icon
+        // a.icon.item.blink.clear(href="/reddit" class="{{isActiveRoute 'reddit'}}")
+        //     i.search.large.icon
+        // a.icon.item.blink.clear(href="/subs" class="{{isActiveRoute 'subs'}}")
+        //     i.reddit.large.icon
+        // a.icon.item.blink.clear(href="/stack" class="{{isActiveRoute 'stack'}}")
+        //     i.stack.exchange.large.icon
+        // a.icon.item.blink.clear.go_shop.mobile.hidden(href="/shop" class="{{isActiveRoute 'shop'}}")
+        //     i.line.shop.large.icon
+        // a.icon.item.blink.clear.go_shop.mobile.hidden(href="/bounties" class="{{isActiveRoute 'bounties'}}")
+        //     i.line.hand.holding.heart.large.icon
         if currentUser
             a.icon.item.blink.clear(href="/people" class="{{isActiveRoute 'people'}}")
                 i.users.large.icon
