--- a/parts/people/person_view.jade
+++ b/parts/people/person_view.jade
@@ -1,59 +1,21 @@
-template(name='person_layout')
-    +yield
 template(name='person_view')
     with current_doc
         .ui.stackable.padded.grid
             .middle.aligned.row
                 .four.wide.center.aligned.column
-                    a.ui.basic.button(href="/m/person")
+                    a.ui.basic.button(href="/people")
                         i.left.chevron.icon
-                        +icolor name='log-cabin' classes='ui mini inline image'
-                        |persons
+                        |people
                 .eight.wide.center.aligned.column 
                     .ui.center.aligned.header 
                         if icon
                             +icolor name=icon
+                        |#{first_name} #{last_name}
                         |#{title}
                 .four.wide.center.aligned.column 
-                    if can_edit
-                        a.ui.basic.icon.button(href="/person/#{_id}/edit")
-                            i.setting.large.icon
-            .row
-                .sixteen.wide.column
-                    a.ui.basic.compact.button(href="/person/#{slug}" class="{{isActiveRoute regex='person_dashboard'}}")
-                        +ismall name='dashboard' classes='ui inline image'
-                        |dashboard
-                    a.ui.basic.compact.button(href="/person/#{slug}/members" class="{{isActiveRoute regex='person_members'}}")
-                        +ismall name='info' classes='ui inline image'
-                        |members
-                    a.ui.basic.compact.button(href="/person/#{slug}/credit" class="{{isActiveRoute regex='person_credit'}}")
-                        +ismall name='coins' classes='ui inline image'
-                        |credit
-                    a.ui.basic.compact.button(href="/person/#{slug}/meals" class="{{isActiveRoute regex='person_meals'}}")
-                        +ismall name='meal' classes='ui inline image'
-                        |meals
-                    a.ui.basic.compact.button(href="/person/#{slug}/dishes" class="{{isActiveRoute regex='person_dishes'}}")
-                        +ismall name='meal' classes='ui inline image'
-                        |dishes
-                    a.ui.basic.compact.button(href="/person/#{slug}/voting" class="{{isActiveRoute regex='person_voting'}}")
-                        +ismall name='elections' classes='ui inline image'
-                        |voting
-                    a.ui.basic.compact.button(href="/person/#{slug}/events" class="{{isActiveRoute regex='person_events'}}")
-                        +ismall name='calendar' classes='ui inline image'
-                        |events
-                    a.ui.basic.compact.button(href="/person/#{slug}/food" class="{{isActiveRoute regex='person_food'}}")
-                        +ismall name='food' classes='ui inline image'
-                        |food
-                    //- a.ui.basic.compact.button(href="/person/#{slug}/settings" class="{{isActiveRoute regex='person_settings'}}")
-                    //-     +ismall name='settings' classes='ui inline image'
-                    //-     |settings
-                    a.ui.basic.compact.button(href="/person/#{slug}/products" class="{{isActiveRoute regex='person_products'}}")
-                        +ismall name='shopping-cart' classes='ui inline image'
-                        |products
-                    a.ui.basic.compact.button(href="/person/#{slug}/services" class="{{isActiveRoute regex='person_services'}}")
-                        +ismall name='service-bell' classes='ui inline image'
-                        |services
-
+                    // if can_edit
+                    a.ui.basic.icon.button(href="/person/#{_id}/edit")
+                        i.setting.large.icon
             .row
                 .four.wide.column 
                     +image_view key='image_id' icon='image' label='image'
@@ -71,114 +33,6 @@ template(name='person_view')
                         |#{address}
                     // +viewing
                 .twelve.wide.column
-                    div
-                    // +yield
-    // +footer
+                    if image_link
+                        img(src=image_link)
 
-template(name='person_dashboard')
-    +html_view key='description' icon='content' label='description'
-    .ui.inline.header 
-        +icolor name='crown'
-        |person leader: 
-    a.ui.basic.button(href="/person/#{slug}/#{leader}")
-        |#{leader}
-    .ui.header 
-        +icolor name='groups'
-        |#{members.count} members
-    .ui.large.selection.animated.list
-        each members 
-            a.item(href="/person/#{slug}/#{username}")
-                img.ui.mini.image(src="{{c.url profile_image_id width=200 height=200}}")
-                .content
-                    .header
-                        |#{username}
-    .ui.header #{meal_count} total meals
-    each person_meals
-        .ui.small.header #{dish.title}
-    .ui.header #{upcoming_meal_count} upcoming meals
-    each upcoming_person_meals
-        .ui.small.header #{dish.title}
-    .ui.segment
-        .ui.header #{dish_count} dishes
-        .ui.selection.animated.list
-            each person_dishes
-                a.item(href="/dish/#{_id}/view")
-                    img.ui.mini.image(src="{{c.url image_id width=100 height=100}}")
-                    .content
-                        .header 
-                            |#{title}
-    +doc_array_togggle key='member_ids' value=currentUser._id add_label='join' remove_label='joined'
-    .ui.header 
-        +i name='rss'
-        |activity
-    each log_items
-        +log_item
-    .ui.header 
-        +icolor name='line-chart'
-        |stats
-    i.refresh.link.icon.refresh_person_stats
-    .ui.large.list
-        .item #{member_count} members
-        .item #{meal_count} meals
-        .item #{dish_count} dishes
-        .item #{total_credit_exchanged} credits exchanged
-    //- +comments
-template(name='person_members')
-    .ui.header members
-    
-template(name='person_voting')
-    .ui.header voting
-    
-template(name='person_meals')
-    .ui.header meals
-    
-template(name='person_dishes')
-    .ui.header dishes
-    
-template(name='person_food')
-    .ui.header food
-    
-template(name='person_products')
-    .ui.header products
-    
-template(name='person_services')
-    .ui.header services
-    
-template(name='person_stats')
-    .ui.header stats
-    
-template(name='person_forume')
-    .ui.header forum
-    
-template(name='person_posts')
-    .ui.header members
-    
-template(name='person_events')
-    .ui.header events
-    
-template(name='person_credit')
-    .ui.header credit
-    
-template(name='person_settings')
-    .ui.header settings
-
-
-// template(name='tribe_card')
-//     .ui.fluid.segment.stackable.grid
-//         a.four.wide.column(href="/tribe/#{slug}")
-//             if image_id
-//                 img.ui.fluid.image(src="{{c.url image_id}}")
-//         .twelve.wide.column
-//             a.ui.header(href="/tribe/#{slug}")
-//                 |#{title}
-//             |#{member_ids.length} members
-//             |!{description}
-//             //- +ismall name='tags' classes='ui inline image'
-//             each tags
-//                 .ui.basic.label #{this}
-//             div
-//             if is_admin
-//                 .ui.small.header slug: #{slug}
-//             if can_edit
-//                 a.ui.basic.icon.button(href="/tribe/#{_id}/edit")
-//                     i.pencil.blue.icon
