--- a/parts/people/person_edit.jade
+++ b/parts/people/person_edit.jade
@@ -23,7 +23,9 @@ template(name='person_edit')
                     +slug_edit key='slug' label='person slug' direct=true
                     +array_edit key='tags' label='tags' icon='tags' direct=true
                     +link_edit key='link' label='link' icon='link' direct=true
-                    +single_user_edit key='leader' label='leader' direct=true
+                    +link_edit key='link_github' label='github link' icon='github' direct=true
+                    +link_edit key='link' label='link' icon='link' direct=true
+                    +link_edit key='link' label='link' icon='link' direct=true
                 .six.wide.column 
                     +text_edit key='first_name' label='first name' icon='title' direct=true
                     +text_edit key='last_name' label='last name' icon='title' direct=true
