--- a/parts/people/person_view.jade
+++ b/parts/people/person_view.jade
@@ -20,6 +20,7 @@ template(name='person_view')
                 .four.wide.column 
                     +image_view key='image_id' icon='image' label='image'
                     +array_view key='tags' icon='tags'
+                    +array_view key='location_tags' icon='tags'
                     .spacer
                     if link
                         a.ui.basic.button(href=link target='_window')
@@ -36,3 +37,4 @@ template(name='person_view')
                     if image_link
                         img(src=image_link)
 
+                    |!{description}
