--- a/client/nav.jade
+++ b/client/nav.jade
@@ -4,7 +4,7 @@ template(name='nav')
         //     i.bars.icon
     
         a.icon.item.blink.clear(href="/" class="{{isActiveRoute regex='home'}}")
-            i.search.large.icon
+            i.globe.large.icon
         // a.icon.item.blink.clear.mobile.hidden(href="/stats" class="{{isActiveRoute 'stats'}}")
         //     i.line.chart.large.icon
         // .ui.dropdown.item
@@ -27,9 +27,11 @@ template(name='nav')
         //     i.line.shop.large.icon
         // a.icon.item.blink.clear.go_shop.mobile.hidden(href="/bounties" class="{{isActiveRoute 'bounties'}}")
         //     i.line.hand.holding.heart.large.icon
-        if currentUser
-            a.icon.item.blink.clear(href="/people" class="{{isActiveRoute 'people'}}")
-                i.users.large.icon
+        // if currentUser
+        a.icon.item.blink.clear(href="/people" class="{{isActiveRoute 'people'}}")
+            i.users.large.icon
+        a.icon.item.blink.clear(href="/posts" class="{{isActiveRoute regex='home'}}")
+            i.edit.large.icon
         // .item(title='session karma')
         //     i.grey.lightning.icon
         //     |#{session_clicks}
@@ -67,7 +69,7 @@ template(name='nav')
                         img.ui.avatar.compact.image(src="{{c.url currentUser.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
                 else 
                     i.user.icon
-                strong.mobile.hidden #{currentUser.name}
+                strong.mobile.hidden #{currentUser.username}
             // a.icon.item.toggle_rightbar.no_blink
             //     i.bars.icon
         else
