--- a/client/search.jade
+++ b/client/search.jade
@@ -101,7 +101,7 @@ template(name='home')
                     .ui.sixteen.wide.column
                         .ui.stackable.three.column.grid.scrolling
                             each rposts
-                                +card
+                                +rcard
                         //     .ui.basic.center.aligned.segment
                         //         i.big.loading.yin.yang.icon
 template(name='search_shortcut')
@@ -109,7 +109,7 @@ template(name='search_shortcut')
 
    
 
-template(name='card')
+template(name='rcard')
     .column.smallcroll
         // .ui.stackable.equal.width.compact.grid
         //     .row
@@ -142,7 +142,7 @@ template(name='card')
             // .ui.label 
             //     i.user.icon
             //     |#{data.author}
-            a.black_text(href="post/#{_id}")
+            a.black_text(href="rpost/#{_id}")
                 |{{ trunc analyzed_text }}...
             if in_dev
                 +print_this
