--- a/parts/people/person_edit.jade
+++ b/parts/people/person_edit.jade
@@ -3,32 +3,28 @@ template(name='person_edit')
         .ui.stackable.padded.grid
             .row
                 .four.wide.column
-                .eight.wide.column
                     .ui.header 
                         i.pencil.icon
                         if icon
                             +icolor name=icon
                         |edit '#{title}' person
-                .four.wide.column
                     a.ui.big.basic.button(href="/person/#{_id}" title='save')
                         i.green.checkmark.icon
                         |save
-            .row
-                .four.wide.column 
                     //- .ui.header
                     //-     |#{title}
                     +remove_button
-                    +color_icon_edit key='icon' label='icon'
+                    +text_edit key='first_name' label='first name' icon='title' direct=true
+                    +text_edit key='last_name' label='last name' icon='title' direct=true
+                    // +color_icon_edit key='icon' label='icon'
                     div
-                    +slug_edit key='slug' label='person slug' direct=true
+                    // +slug_edit key='slug' label='person slug' direct=true
                     +array_edit key='tags' label='tags' icon='tags' direct=true
                     +link_edit key='link' label='link' icon='link' direct=true
                     +link_edit key='link_github' label='github link' icon='github' direct=true
-                    +link_edit key='link' label='link' icon='link' direct=true
-                    +link_edit key='link' label='link' icon='link' direct=true
+                    // +link_edit key='link' label='link' icon='link' direct=true
+                    // +link_edit key='link' label='link' icon='link' direct=true
                 .six.wide.column 
-                    +text_edit key='first_name' label='first name' icon='title' direct=true
-                    +text_edit key='last_name' label='last name' icon='title' direct=true
                     +text_edit key='title' label='title' icon='title' direct=true
                     .spacer
                     +image_link_edit key='image_link' label='image link' icon='image' direct=true
@@ -37,5 +33,12 @@ template(name='person_edit')
                     +text_edit key='address' label='address' icon='marker' direct=true
                     .spacer
                     +text_edit key='address_link' label='address link' icon='marker' direct=true
+                    .ui.header posts
+                    .ui.button.add_post
+                        |add post
+                        i.plus.icon
+                    each posts
+                        .ui.header #{title}
+                    
                 .six.wide.column
                     +html_edit key='description' label='description' icon='content' direct=true
