--- a/parts/people/person_view.jade
+++ b/parts/people/person_view.jade
@@ -1,23 +1,21 @@
 template(name='person_view')
     with current_doc
         .ui.stackable.padded.grid
-            .middle.aligned.row
-                .four.wide.center.aligned.column
+            .row
+                .four.wide.column
                     a.ui.basic.button(href="/people")
                         i.left.chevron.icon
                         |people
-                .eight.wide.center.aligned.column 
                     .ui.center.aligned.header 
                         if icon
                             +icolor name=icon
                         |#{first_name} #{last_name}
                         |#{title}
-                .four.wide.center.aligned.column 
                     // if can_edit
                     a.ui.basic.icon.button(href="/person/#{_id}/edit")
                         i.setting.large.icon
-            .row
-                .four.wide.column 
+                    if image_link
+                        img(src=image_link)
                     +image_view key='image_id' icon='image' label='image'
                     +array_view key='tags' icon='tags'
                     +array_view key='location_tags' icon='tags'
@@ -34,7 +32,9 @@ template(name='person_view')
                         |#{address}
                     // +viewing
                 .twelve.wide.column
-                    if image_link
-                        img(src=image_link)
-
                     |!{description}
+                    .ui.header posts
+                    i.plus.circular.link.icon.add_post
+                    each person_posts
+                        a.ui.header(href="/post/#{_id}/") #{title}
+                    
